update:ファイル移動

--- a/apps/meteor/index.html
+++ b/apps/meteor/index.html
@@ -7,8 +7,8 @@
 
     <meta name=viewport content='width=500'>
 
-    <link rel="stylesheet" type="text/css" media="all" href="https://otutama.net/apps/meteor/css/reset.css" />
-    <link rel="stylesheet" type="text/css" media="all" href="https://otutama.net/apps/meteor/css/base.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="https://otutama.net/css/meteor_eset.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="https://otutama.net/css/meteor_base.css" />
     <!-- touch only css -->
     <script type="text/javascript">
     </script>
@@ -23,8 +23,8 @@
         <div id="container">
 
             <div id="logo">
-                <a href="/">
-                    <img src="https://otutama.net/apps/meteor/img/logo800*364.png">
+                <a href="https://otutama.net/">
+                    <img src="https://otutama.net/img/logo800*364.png">
                     <span>
                         MeTeOR!
                     </span>
@@ -33,7 +33,7 @@
 
             <div id="downloads">
                     <a href="/">
-                        <img src="https://otutama.net/apps/meteor/img/Download_on_the_App_Store_Badge_US-UK_135x40.svg"/>
+                        <img src="https://otutama.net/img/Download_on_the_App_Store_Badge_US-UK_135x40.svg"/>
                     </a>
             </div>
 <div class=”video”>
