fix:ロゴ画像が出てない

--- a/apps/meteor/index.html
+++ b/apps/meteor/index.html
@@ -5,7 +5,7 @@
 <head>
     <TITLE>MeTeOR!!!</TITLE>
 
-    <meta name=viewport content='width=500'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" media="all" href="https://otutama.net/css/meteor_eset.css" />
     <link rel="stylesheet" type="text/css" media="all" href="https://otutama.net/css/meteor_base.css" />
@@ -24,7 +24,7 @@
 
             <div id="logo">
                 <a href="https://otutama.net/">
-                    <img src="https://otutama.net/img/logo800*364.png">
+                    <img src="https://otutama.net/img/logo.png">
                     <span>
                         MeTeOR!
                     </span>
