fix:プライバシーポリシーのリンク切れ(暫定)

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     
     
         <div class="privacy-policy-title centered">
-          <a href="/privacyPolicy">
+          <a href="/privacypolicy">
             <span>Privacy Policy</span>
           </a>
         </div>
