Deploy #18 from CircleCI [ci skip]

--- a/apps/meteor/index.html
+++ b/apps/meteor/index.html
@@ -86,13 +86,10 @@
 
       <div class="content">
         
-  <section class="container page">
-  <article>
-    <header>
-      <h1>MeTeOR!</h1>
-    </header>
-
-    <p><img src="/apps/meteor/logo.png" alt="Logo" /></p>
+  <section class="container centered apppage" style="background-image:url(/apps/meteor/background.png);">
+  <div>
+        <article id="content">
+           <p><img src="/apps/meteor/logo.png" alt="Logo" /></p>
 
 <a href="https://itunes.apple.com/jp/app/meteor/id1357906586?mt=8" class="app-store-badge"></a>
 
@@ -103,7 +100,8 @@
 </div>
 
 
-  </article>
+        </article>
+  </div>
 </section>
 
 
