Deploy #23 from CircleCI [ci skip]

--- a/apps/index.html
+++ b/apps/index.html
@@ -94,7 +94,7 @@
   <ul>
     
     <li>
-      <span>February 5, 2019</span><a href="/apps/lifecounter/">LifeCounterForMTG</a>
+      <span>February 5, 2019</span><a href="/apps/lifecounter/">MTG Counter Life and Poison</a>
     </li>
     
     <li>
