--- a/apps/meteor/index.html
+++ b/apps/meteor/index.html
@@ -86,9 +86,9 @@
 
       <div class="content">
         
-  <section class="container centered apppage" style="background-image:url(/apps/meteor/background.png);">
+  <section class="container centered apppage" style="background-image:url(/apps/meteor/background.png);background-color: ;">
   <div>
-        <article id="content">
+        <article id="content" style="color:;">
            <p><img src="/apps/meteor/logo.png" alt="Logo" /></p>
 
 <a href="https://itunes.apple.com/jp/app/meteor/id1357906586?mt=8" class="app-store-badge"></a>
