--- a/apps/tenvaders/index.html
+++ b/apps/tenvaders/index.html
@@ -86,9 +86,9 @@
 
       <div class="content">
         
-  <section class="container centered apppage" style="background-image:url();">
+  <section class="container centered apppage" style="background-image:url();background-color: ;">
   <div>
-        <article id="content">
+        <article id="content" style="color:;">
            
 
 <p><img src="/apps/tenvaders/title.png" alt="Logo" /></p>
