--- a/404.html
+++ b/404.html
@@ -58,8 +58,7 @@
     <main class="wrapper">
       <nav class="navigation">
   <section class="container">
-    <a class="navigation-title titlelogo" href="/"><img src="/images/titlelogo.png" alt="logo"></a>
-    <a class="navigation-title" href="/">OTUTAMA Studio</a>
+    <a class="navigation-title titlelogo" href="/"><img src="/images/titlelogo.png" alt="logo">OTUTAMA Studio</a>
     <input type="checkbox" id="menu-control"/>
     <label class="menu-mobile  float-right " for="menu-control">
       <span class="btn-mobile  float-right ">&#9776;</span>
