Deploy #36 from CircleCI [ci skip]

--- a/apps/tenvaders/index.html
+++ b/apps/tenvaders/index.html
@@ -28,7 +28,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <title>
-  Tenvaders(Android版)の配信を再開しました。 - OTUTAMA Studio
+  TENVADERS - OTUTAMA Studio
 </title>
   </head>
   <body>
@@ -62,8 +62,37 @@
 </header>
 
     <div class="content">
-<div class="default-content">
+<div class="apps-content centerd" style="background-image:url();background-color: ;color:;">
   
+
+<p><img src="/apps/tenvaders/title.png" alt="Logo" /></p>
+
+<h1 id="demo">Demo</h1>
+
+<p>
+<a class="no-hover-animation" href="https://unityroom.com/games/tender_201811">
+  <div class="blogcard">
+    
+      <div class="blogcard--thumbnail">
+        <img src="/apps/tenvaders/thumbnail_unityroom.png" alt="">
+      </div>
+    
+    <div class="blogcard--text">
+      <p class="blogcard--title">TENVADERS | フリーゲーム投稿サイト unityroom</p>
+      <p class="blogcard--description">あれから40年、今度の侵略者は数字。。迫り来る数字を撃破し「=10」を作れ！</p>
+    </div>
+  </div>
+</a>
+</p>
+
+
+<h1 id="download">Download</h1>
+
+<p><a href="https://itunes.apple.com/jp/app/meteor/id1448087357?mt=8" class="app-store-badge"></a>
+
+<a href='http://play.google.com/store/apps/details?id=net.otutama.tenvaders' class="google-play-badge"></a>
+</p>
+
 </div>
 </div>
     <div class="footer">
