Deploy #37 from CircleCI [ci skip]

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             2019-02-21
           </div>
           <div class="newslist--title no-hover-animation">
-            <a href="/apps/tenvaders/">Tenvaders(Android版)の配信を再開しました。</a>
+            <a href="/news/190221_tenvaders/">Tenvaders(Android版)の配信を再開しました。</a>
           </div>
         </div>
       
